--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,5 +58,7 @@ jobs:
         run: cargo publish --dry-run --allow-dirty
 
       - name: Publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: cargo publish --allow-dirty
         if: startsWith(github.ref, 'refs/tags/v')
